--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@blueprintjs/core": "3.17.1",
     "firebase": "6.3.0",
+    "formik": "1.5.8",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "3.0.1"
+    "react-firebaseui": "3.1.2",
+    "react-scripts": "3.0.1",
+    "yup": "0.27.0"
   },
   "devDependencies": {
     "typescript": "3.3.3"
