--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@blueprintjs/core": "3.17.1",
     "@firebase/app": "0.4.11",
     "@firebase/auth": "0.11.5",
+    "firebase": "6.3.1",
     "formik": "1.5.8",
     "react": "16.8.6",
     "react-dom": "16.8.6",
